docs(API): update API documentation
upy upy oopsie i did a fucky wucky

sorry translators

Update v3.md

tes

--- a/en/dev/api/v3.md
+++ b/en/dev/api/v3.md
@@ -8,11 +8,12 @@ editor: markdown
 dateCreated: 2021-09-07T01:44:46.864Z
 ---
 
-# v3
+# V3 Reference Documentation
 
 > Base URL:
-https://api.premid.app/v3{.is-info}
+> https://api.premid.app/v3{.is-info}
 
-
-## Endpoints
-> Work in progress{.is-warning}
+[Mutations](./v3/mutations.md)
+[Objects](./v3/objects.md)
+[Queries](./v3/queries.md)
+[Scalars](./v3/scalars.md)
