--- a/pl/dev/api/v2.md
+++ b/pl/dev/api/v2.md
@@ -40,7 +40,7 @@ dateCreated: 2021-09-07T01:44:43.430Z
       <td style="text-align:left"><b>/credits/:userID</b>
       </td>
       <td style="text-align:left"><code>GET</code></td>
-      <td style="text-align:left">Get Discord informations of our PreMiD Staff and Contributors / a specific user, using Discord User ID. Musisz być na naszym discordzie.</td>
+      <td style="text-align:left">Get Discord informations of our PreMiD Staff and Contributors / a specific user, using Discord User ID. Musisz być na naszym serwerze Discord.</td>
     </tr>
     <tr>
       <td style="text-align:left"><b>/langFile/list</b>
